<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/darkGrey"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="3">

        <TextView
            android:id="@+id/workingsTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingEnd="30dp"
            android:text=""
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="30sp"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingEnd="30dp"
            android:text=""
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="45sp"
            tools:ignore="RtlCompat" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:onClick="clearOnClick"
                android:text="@string/c"
                android:textColor="#FF5722"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:onClick="bracketsOnClick"
                android:text="()"
                android:textColor="#673AB7"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:onClick="powerOfOnClick"
                android:text="^"
                android:textColor="#673AB7"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:onClick="divisionOnClick"
                android:text="/"
                android:textColor="#673AB7"
                android:textSize="@dimen/calcButtonTextSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:onClick="sevenOnClick"
                android:text="@string/_7"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:onClick="eightOnClick"
                android:text="@string/_8"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:onClick="nineOnClick"
                android:text="@string/_9"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:onClick="timesOnClick"
                android:text="@string/_x"
                android:textColor="#673AB7"
                android:textSize="@dimen/calcButtonTextSize" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:onClick="fourOnClick"
                android:text="@string/_4"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:onClick="fiveOnClick"
                android:text="@string/_5"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:onClick="sixOnClick"
                android:text="@string/_6"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:onClick="minusOnClick"
                android:text="-"
                android:textColor="#673AB7"
                android:textSize="@dimen/calcButtonTextSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:onClick="oneOnClick"
                android:text="1"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:text="@string/_2"
                android:onClick="twoOnClick"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:text="@string/_3"
                android:onClick="threeOnClick"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:onClick="plusOnClick"
                android:text="+"
                android:textColor="#673AB7"
                android:textSize="@dimen/calcButtonTextSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:text="."
                android:onClick="decimalOnClick"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:text="@string/_0"
                android:onClick="zeroOnClick"
                style="?android:attr/buttonBarButtonStyle" />


            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/red"
                android:onClick="equalsOnClick"
                android:text="="
                android:textColor="#455A64"
                android:textSize="40sp" />

        </LinearLayout>




    </LinearLayout>


</LinearLayout>